--- a/mysql.yaml
+++ b/mysql.yaml
@@ -21,20 +21,22 @@ spec:
       - name: MYSQL_USER
         valueFrom:
           secretKeyRef:
-            name: mysql_secret
+            name: mysql-secret
             key: username
       - name: MYSQL_PASSWORD
         valueFrom:
           secretKeyRef:
-            name: mysql_secret
+            name: mysql-secret
   key: password
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql_service
+  name: mysql-service
 spec:
   ports:
-  - port: 3306
+  - protocol: TCP
+    port: 3306
+    targetPort: 3306
   selector:
     app: mysql
