--- a/mysql_configmap.yaml
+++ b/mysql_configmap.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: mysql_configmap
+  name: mysql-configmap
 data:
-  host: mysql_service 
+  host: mysql-service 
