--- a/mysql_secret.yaml
+++ b/mysql_secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mysql_secret
+  name: mysql-secret
 data:
   username: dWRheQ==
   password: dGFua2J1bmQ=
