--- a/phpmysql.yaml
+++ b/phpmysql.yaml
@@ -31,7 +31,7 @@ metadata:
   name: phpmysql-service
 spec:
   ports:
-  - portocol: TCP
+  - protocol: TCP
     port: 80
     targetPort: 80
     nodePort: 30000
