--- a/mysql.yaml
+++ b/mysql.yaml
@@ -28,6 +28,11 @@ spec:
             secretKeyRef:
               name: mysql-secret
               key: password
+        - name: MYSQL_ROOT_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: mysql-secret
+              key: password
 ---
 apiVersion: v1
 kind: Service
