--- a/phpmysql.yaml
+++ b/phpmysql.yaml
@@ -32,7 +32,8 @@ metadata:
 spec:
   ports:
   - protocol: TCP
-    port: 80
+    port: 30001
     targetPort: 80
   selector:
     app: phpmysql
+  type: NodePort
